--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCj0nzA6-HODaV2p298jpyuj2vsfr7n-TE&callback=initMap"
+    ></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SEI CAFE</title>
+    <title>Travel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
